footer alignment correction

--- a/style.css
+++ b/style.css
@@ -64,15 +64,4 @@ button{
     color: chartreuse;
 }
 
-.heading h1{
-    position: absolute;
-    top: 0%;
-    left: 11.8em;
-    margin: 25px 0;
-    text-transform: uppercase;
-    text-decoration: underline 2px;
-    text-underline-offset: 6px;
-    color: chocolate;
-    font-weight: 900;
-    font-size: 49px;
-}
+
